--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,11 @@
 {
+    "name": "oxynet/framework",
+    "authors": [
+        {
+            "name": "Doctrix",
+            "email": "34386780+Doctrix@users.noreply.github.com"
+        }
+    ],
     "autoload": {
         "files":["src/fonctions/helpers.php"],
         "psr-4": {
@@ -11,5 +18,8 @@
         "filp/whoops": "2.3.1",
         "fzaninotto/faker": "1.8.0",
         "vlucas/valitron": "1.4.7"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.2"
     }
 }
