--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "symfony/var-dumper": "^5.1",
         "filp/whoops": "2.3.1",
         "fzaninotto/faker": "1.8.0",
-        "vlucas/valitron": "1.4.7"
+        "vlucas/valitron": "1.4.7",
+        "guzzlehttp/psr7": "^1.6",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2"
