--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "oxynet/framework",
+    "name": "bbrpr/oxy-net",
     "authors": [
         {
             "name": "Doctrix",
@@ -7,21 +7,16 @@
         }
     ],
     "autoload": {
-        "files":["src/fonctions/helpers.php"],
         "psr-4": {
-            "App\\": "src/class/"
+            "App\\":"src/",
+            "Tests\\": "tests/"
         }
     },
     "require": {
-        "altorouter/altorouter": "1.2.0",
-        "symfony/var-dumper": "^5.1",
-        "filp/whoops": "2.3.1",
-        "fzaninotto/faker": "1.8.0",
-        "vlucas/valitron": "1.4.7",
-        "guzzlehttp/psr7": "^1.6",
-        "squizlabs/php_codesniffer": "^3.5"
+        "php": ">=7.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.2"
+        "phpunit/phpunit": "^9.1",
+        "spatie/phpunit-watcher": "^1.22"
     }
 }
