--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bbrpr/oxy-net",
+    "name": "oxynet/framework",
     "authors": [
         {
             "name": "Doctrix",
@@ -7,16 +7,25 @@
         }
     ],
     "autoload": {
+        "files":["src/fonctions/helpers.php"],
         "psr-4": {
-            "App\\":"src/",
-            "Tests\\": "tests/"
+            "App\\": "src/class/",
+            "Tests\\": "tests/",
+            "ViewUser\\": "views/user/"
         }
     },
     "require": {
-        "php": ">=7.3"
+        "php": ">=7.3",
+        "altorouter/altorouter": "^2.0",
+        "symfony/var-dumper": "^5.2",
+        "guzzlehttp/psr7": "^1.7",
+        "fzaninotto/faker": "1.8.0",
+        "vlucas/valitron": "1.4.7",
+        "filp/whoops": "2.3.1",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.1",
-        "spatie/phpunit-watcher": "^1.22"
+        "phpunit/phpunit": "^9.5",
+        "spatie/phpunit-watcher": "^1.23"
     }
 }
