--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "fzaninotto/faker": "1.8.0",
         "vlucas/valitron": "1.4.7",
         "filp/whoops": "2.3.1",
-        "squizlabs/php_codesniffer": "^3.5"
+        "squizlabs/php_codesniffer": "^3.5",
+        "http-interop/response-sender": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
