--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,34 @@
 {
-    "name": "oxynet/oxy-net",
-    "authors": [
-        {
-            "name": "Doctrix",
-            "email": "34386780+Doctrix@users.noreply.github.com"
-        }
-    ],
-    "autoload": {
-        "files":["controller/fonction/helpers.php"],
-        "psr-4": {
-            "Core\\": "core/",
-            "Model\\": "model/",
-            "Framework\\": "src/framework/",
-            "Tests\\": "tests/"
-        }
-    },
-    "require": {
-        "php": ">=7.3",
-        "altorouter/altorouter": "^2.0",
-        "symfony/var-dumper": "^5.2",
-        "guzzlehttp/psr7": "^1.7",
-        "fzaninotto/faker": "1.8.0",
-        "vlucas/valitron": "1.4.7",
-        "filp/whoops": "2.3.1",
-        "squizlabs/php_codesniffer": "^3.5",
-        "http-interop/response-sender": "^1.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "spatie/phpunit-watcher": "^1.23"
+"description": "CMS OGS",
+"name": "oxynet/oxy-net",
+"authors": [
+    {
+        "name": "Doctrix",
+        "email": "34386780+Doctrix@users.noreply.github.com"
+    }
+],
+"autoload": {
+    "files":["controller/fonction/helpers.php"],
+    "psr-4": {
+        "Core\\": "core/",
+        "Model\\": "model/",
+        "Framework\\": "src/framework/",
+        "Tests\\": "tests/"
+    }
+},
+"require": {
+    "php": ">=7.3",
+    "altorouter/altorouter": "^2.0",
+    "symfony/var-dumper": "^5.2",
+    "guzzlehttp/psr7": "^1.7",
+    "fzaninotto/faker": "1.8.0",
+    "vlucas/valitron": "1.4.7",
+    "filp/whoops": "2.3.1",
+    "squizlabs/php_codesniffer": "^3.5",
+    "http-interop/response-sender": "^1.0"
+},
+"require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "spatie/phpunit-watcher": "^1.23"
     }
 }
