--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "psr-4": {
         "Core\\": "core/",
         "Model\\": "model/",
-        "Framework\\": "src/framework/",
+        "Framework\\": "src/Framework/",
         "Tests\\": "tests/"
     }
 },
@@ -24,10 +24,11 @@
     "fzaninotto/faker": "1.8.0",
     "vlucas/valitron": "1.4.7",
     "filp/whoops": "2.3.1",
-    "squizlabs/php_codesniffer": "^3.5",
-    "http-interop/response-sender": "^1.0"
+    "http-interop/response-sender": "^1.0",
+    "zendframework/zend-expressive-fastroute": "^3.0"
 },
 "require-dev": {
+    "squizlabs/php_codesniffer": "^3.5",
     "phpunit/phpunit": "^9.5",
     "spatie/phpunit-watcher": "^1.23"
     }
